mule-user-guide/v/3.8/components.adoc
= Components
:keywords: anypoint, studio, esb, components

The building blocks known as *Components* fall into three categories, general, script, and web service:

* *General* - General components execute whenever a message is received. The logic embedded into General components cannot be modified. Components such as Logging and Flow Reference fall into this category.

* *Script* - Script components do not contain pre-packaged logic; instead they allow the developer to specify the logic (in the form of a custom script or a Java class) to add into the component. Script components also allow you to:
+
** Configure interceptors
** Add Spring beans
** Change the value or reference of a specific property within the associated class
+
The Java Component allows you to reference a Java class. The other Script components support the Groovy, JavaScript, Python and Ruby scripting engines.

* *Web Service* - Web Service components, as the name implies, enable Mule to use SOAP and RESTful protocols to communicate with external Web services. The SOAP and RESTful components use CXF and Jersey services to convert messages from Java to XML. Web Service components also allow the developer to select or define the logic to be invoked by component.
+
If using the RESTful component you only need to select a Java class and add a script to the component. On the other hand, SOAP configuration requires you to define attributes and select the operation method used to publish a SOAP Web service. As an example of how the CXF component can be used, a SOAP message could be sent to a Web-service-enabled website such as a used car price database, with the parameters needed for a search.
+
The site would then return an XML-formatted document with the resulting data, for example, prices, model, and features. The data returned is then integrated directly into a third-party website or application.


== Configuring Components

You can locate components in the *Mule Palette*.

To configure a component, double-click on the component to open the *Properties Editor* in the console. Every component in the Studio palette includes three common fields: *Display name*, *Notes*, and *Metadata*, all of which are optional.

Beyond the two common fields, most Components do not require extensive configuration. The five script components available within Studio support almost identical property pane fields.

For details, see the individual component reference pages on how to use and configure each type of component.

== Components Available in Anypoint Studio

The following three tables each detail one of the Studio Component sub-groups.

=== General Components

General components allow you to enhance a flow by attaching functionality such as logging or displaying output.

[cols="10a,15a,75a",options="header"]
|===
|  |Components |Description
|image:flow-reference-icon.png[flow-reference-icon]
|Flow Reference
|This building block calls another external flow. The called flow can be one of two types:

A *subflow*, which inherits the processing strategy and exception handling properties of the calling flow.

A *child flow,* which sets its own processing strategy and exception handling properties.

If the called flow is _Synchronous_, the calling flow waits until the called flow completes execution, then resumes. If the called flow is _Asynchronous_, the calling flow resumes execution immediately.

See the link:/mule-user-guide/v/3.8/flow-reference-component-reference[Flow Reference Component Reference].
|image:logger-icon.png[logger-icon]
|Logger
|Logs custom strings, including strings constructed from embedded expressions. Also allows specification of logging level and category.
See the link:/mule-user-guide/v/3.8/logger-component-reference[Logger Component Reference]
|===

=== Script Components

Script components facilitate Software as a Service (SaaS) integration by providing language-specific "shells" to make custom-coded business logic available in a Mule application. You can write the business logic in Java, Ruby, JavaScript, Groovy, or Python.

[cols="10a,15a,75a",options="header"]
|===
|  |Components |Description
|image:groovy-component-icon.png[groovy-component-icon.png] |Groovy |Facilitates the integration of a custom script backed by the Groovy script engine.

See the link:/mule-user-guide/v/3.8/groovy-component-reference[Groovy Component Reference].
|image:java-component-icon.png[java-component-icon] |Java |Allows you to select a Java class to be invoked by the application flow.

See link:/mule-user-guide/v/3.8/java-component-reference[Java Component].
|image:javascript-component-icon.png[javascript-component-icon] |JavaScript |Allows integration of a custom script backed by the JavaScript engine.

See the link:/mule-user-guide/v/3.8/javascript-component-reference[JavaScript Component Reference].
|image:python-component-icon.png[python-component-icon] |Python |Allows integration of a custom script backed by the Python script engine.

See the link:/mule-user-guide/v/3.8/python-component-reference[Python Component Reference].
|image:ruby-component-icon.png[ruby-component-icon] |Ruby |Allows integration of a custom script backed by the Ruby script engine.

See the link:/mule-user-guide/v/3.8/ruby-component-reference[Ruby Component Reference].
|image:script-component-icon.png[script-component-icon] |Script |Makes a script written in Groovy, JavaScript, Python, or Ruby available to the application flow.

See the link:/mule-user-guide/v/3.8/script-component-reference[Script Component Reference].
|===

=== Web Service Components

Web Service components provide the developer with the framework to reference classes and API's needed by RESTful and SOAP Web services. These components let you add interceptors, bundled logic which executes before the service is published, that run tasks such as scheduling or logging a specific event.

[cols="10a,15a,75a",options="header"]
|===
|  |Components |Description
|image:rest-component-icon.png[rest-component-icon] |REST |Makes a REST web service available to the application flow via Jersey.

See the link:/mule-user-guide/v/3.8/rest-component-reference[REST Component Reference].
|image:cxf-component-icon.png[cxf-component-icon] |CXF |Makes a web service available to the application flow via CXF.

See the link:/mule-user-guide/v/3.8/cxf-component-reference[CXF Component Reference].
|===

== See Also

* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft's Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
